--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JavaScript Fundamentals – Part 1</title>
     <style>
       body {
+        /* comment */
         height: 100vh;
         display: flex;
         align-items: center;
